plugins {
    id 'java'
    id 'application'
   // id 'checkstyle'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
    String javaFxVersion = '17.0.16'
    implementation 'org.openjfx:javafx-controls:17.0.7'
    implementation 'org.openjfx:javafx-fxml:17.0.7'
    implementation "org.openjfx:javafx-base:$javaFxVersion:mac"
    implementation "org.openjfx:javafx-controls:$javaFxVersion:mac"
    implementation "org.openjfx:javafx-fxml:$javaFxVersion:mac"
    implementation "org.openjfx:javafx-graphics:$javaFxVersion:mac"

}

jar {
    archiveBaseName = 'tarawrr'
    manifest {
        attributes(
                'Main-Class': 'Main'
        )
    }
}

test {
    useJUnitPlatform()

    testLogging {
        events "passed", "skipped", "failed"

        showExceptions true
        exceptionFormat "full"
        showCauses true
        showStackTraces true
        showStandardStreams = false
    }
}

application {
    mainClass.set("Main")
}

shadowJar {
    archiveBaseName = "tarawrr"
    archiveClassifier = null
    configurations = [project.configurations.runtimeClasspath]
    mergeServiceFiles()
}

run {
    jvmArgs = [
            '--module-path', '/Users/tara/Downloads/javafx-sdk-17.0.16/lib',
            '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics'
    ]
}


task fatJar(type: Jar) {
    archiveBaseName = 'tarawrr'
    archiveVersion = '1.0'
    from sourceSets.main.output
    dependsOn configurations.runtimeClasspath
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }

    // Handle duplicate entries
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE  // You can choose to EXCLUDE or WARN

    manifest {
        attributes(
                'Main-Class': 'Main'
        )
    }
}


